# ExactPdfGrid

./: .gitignore  README.md  main.py  ocr_processing.py  pdf_to_image.py  pyproject.toml  requirements.txt  server.py  start.bat  table_detection.py  xlsx_output.py
.github/workflows/: ci.yml  publish.yml
src/exactpdfgrid/: __init__.py  cli.py  config.py  core.py  detection.py  detection_lineless.py  extraction.py  output.py  pdf_render.py  utils.py
src/exactpdfgrid/engines/: __init__.py  base.py  pymupdf.py  rapidocr.py
src/exactpdfgrid/web/: __init__.py  server.py
src/exactpdfgrid/web/static/: app.js  index.html  style.css
web/: app.js  index.html  style.css
