[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exactpdfgrid"
version = "0.1.1"
description = "Extract bordered tables from PDFs and export them to Excel (.xlsx)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ExactPdfGrid contributors" }]
keywords = ["pdf", "table-extraction", "ocr", "xlsx", "opencv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pymupdf>=1.23",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
web = ["flask>=2.3"]
ocr = ["rapidocr-openvino>=1.3"]
ocr-onnx = ["rapidocr-onnxruntime>=1.3"]
dev = ["pytest>=7", "ruff>=0.4"]
all = ["exactpdfgrid[web,ocr]"]

[project.scripts]
exactpdfgrid = "exactpdfgrid.cli:main"
exactpdfgrid-web = "exactpdfgrid.web.server:main"

[project.urls]
Homepage = "https://github.com/cowrider2018/ExactPdfGrid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exactpdfgrid = ["web/static/*"]
