[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "exactpdfgrid"
dynamic = ["version"]
description = "Extract bordered tables from PDFs and export them to Excel (.xlsx)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ExactPdfGrid contributors" }]
keywords = ["pdf", "table-extraction", "ocr", "xlsx", "opencv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pymupdf>=1.23",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
web = ["flask>=2.3"]
ocr = ["rapidocr>=3.0", "openvino>=2024.0"]
ocr-onnx = ["rapidocr>=3.0", "onnxruntime>=1.17"]
ocr-all = ["rapidocr>=3.0", "openvino>=2024.0", "onnxruntime>=1.17"]
dev = ["pytest>=7", "ruff>=0.4"]
all = ["exactpdfgrid[web,ocr]"]

[project.scripts]
exactpdfgrid = "exactpdfgrid.cli:main"
exactpdfgrid-web = "exactpdfgrid.web.server:main"

[project.urls]
Homepage = "https://github.com/cowrider2018/ExactPdfGrid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exactpdfgrid = ["web/static/*"]

[tool.setuptools_scm]
version_file = "src/exactpdfgrid/_version.py"
local_scheme = "no-local-version"
